--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,46 @@
 html {
   background: white;
+  font-size: 100%;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+body {
+  background-color: white;
   max-width: 1000px;
   margin: 0 auto;
-  font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+  color: black;
+  margin-left: 3.5rem;
+}
+h2 {
+  margin-left: 1rem;
+}
+
+h3 {
+  margin-left: 3.5rem;
+}
+
+p {
+  margin-left: 3.5rem;
+}
+
+a {
+  color: rgb(128, 68, 128);
+  text-decoration: none;
+}
+
+a:visited {
+  color: rgb(128, 68, 128);
+}
+
+a:hover {
+  color: rgb(180, 122, 180);
+  text-decoration: underline;
+}
+
+a:active {
+  color: red;
 }
