--- a/styles.css
+++ b/styles.css
@@ -13,19 +13,19 @@ body {
 
 h1 {
   color: black;
-  margin-left: 5rem;
+  margin-left: 2.5rem;
 }
 h2 {
-  margin-left: 2.5rem;
+  /*margin-left: 2.5rem;*/
 }
 
 h3 {
-  margin-left: 5rem;
+  margin-left: 2.5rem;
 }
 
 p {
-  margin-left: 5rem;
-  margin-right: 3.5rem;
+  margin-left: 2.5rem;
+  /* margin-right: 3.5rem;*/
 }
 
 a {
