--- a/stylesBlog.css
+++ b/stylesBlog.css
@@ -15,14 +15,12 @@ h1 {
   color: black;
   margin-left: 2.5rem;
 }
-
-h3 {
+h2 {
   margin-left: 2.5rem;
 }
 
-p {
+h3 {
   margin-left: 2.5rem;
-  /* margin-right: 3.5rem;*/
 }
 
 a {
@@ -41,4 +39,12 @@ a:hover {
 
 a:active {
   color: red;
+}
+
+.normal-box {
+  background-color: white;
+  width: auto;
+  padding: 6px;
+  border: 5px solid black;
+  margin: 30px;
 }
