--- a/stylesRelax.css
+++ b/stylesRelax.css
@@ -15,11 +15,12 @@ h1 {
   color: black;
   margin-left: 2.5rem;
 }
+
 h2 {
-  margin-left: 2.5rem;
+  margin-left: 0rem;
 }
 
-h3 {
+p {
   margin-left: 2.5rem;
 }
 
@@ -39,12 +40,4 @@ a:hover {
 
 a:active {
   color: red;
-}
-
-.normal-box {
-  background-color: white;
-  width: auto;
-  padding: 6px;
-  border: 5px solid black;
-  margin: 30px;
 }
