--- a/stylesRelax.css
+++ b/stylesRelax.css
@@ -20,10 +20,6 @@ h2 {
   margin-left: 0rem;
 }
 
-p {
-  margin-left: 2.5rem;
-}
-
 a {
   color: rgb(128, 68, 128);
   text-decoration: none;
@@ -40,4 +36,19 @@ a:hover {
 
 a:active {
   color: red;
+}
+
+.normal-box {
+  background-color: white;
+  width: auto;
+  padding: 6px;
+  border: 5px solid black;
+  margin: 30px;
+}
+
+img {
+  width: 180px;
+  height: 180px;
+  display: block; /*no space*/
+  padding-bottom: 2rem;
 }
